fixes 1108_v4
